Move processing files into self contained folder and add html file with PJS to load script in browser

--- a/.gitattributes
+++ b/.gitattributes
@@ -11,3 +11,9 @@
 *.png binary
 *.gif binary
 *.vlw binary
+*.ogg binary
+*.wav binary
+
+# Tell linguist to ignore all files, then just look at .pde files
+* linguist-vendored
+*.pde linguist-vendored=false
